# agents

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/agents/: README.md  configs.py  settings.py
src/agents/agent_tool/: README.md  __init__.py  adapt_strategy.py  adaptive_reflexion_strategy.py  agent_tool.py  base_strategy.py  direct_strategy.py  react_strategy.py  reflexion_strategy.py
src/agents/agent_tool/prompts/: adapt_strategy.jinja  adaptive_reflexion_strategy.jinja  agent_tool.jinja  direct_strategy.jinja  react_strategy.jinja  reflexion_strategy.jinja  sub_agent_tool.jinja
src/agents/agent_tool/recursive/: __init__.py  context.py  runner.py  sub_agent_tool.py
src/agents/agent_tool/tests/: __init__.py  common_fixtures.py  conftest.py  test_adapt_strategy.py  test_adaptive_reflexion_strategy.py  test_agent_tool.py  test_base_strategy.py  test_direct_strategy.py  test_planning_strategies.py  test_react_strategy.py  test_reflexion_strategy.py
src/agents/example_agents/email_outreach/: tools.py
src/agents/llm_core/: README.md  llm_client.py  llm_configs.py
src/agents/llm_core/tests/: test_llm_client.py
src/agents/tests/: conftest.py  test_settings.py  test_utils.py  test_utils_pydantic_models.py
src/agents/tools/: README.md  calculator.py  langchain_tool_wrapper.py  tavily.py  yfinance_toolkit.py
src/agents/tools_core/: README.md  base_tool.py  base_tool_from_kwargs.py  llm_base_tool.py
src/agents/utilities/: __init__.py  pydantic_utils.py  utils.py
src/agents/webapp/: README.md  __init__.py  app.py  config.py
(+111 files in other folders)
