[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chainlit>=2.9.5",
    "email-validator>=2.3.0",
    "jinja2>=3.1.6",
    "langchain-core>=1.2.7",
    "langchain-text-splitters>=1.1.0",
    "loguru>=0.7.3",
    "numexpr>=2.14.1",
    "openai",
    "playwright>=1.57.0",
    "polyfactory>=3.2.0",
    "pydantic",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
    "tiktoken>=0.12.0",
    "yfinance>=1.0",
]


[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = ["src/agents"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: tests that take a long time to run",
    "integration: integration tests requiring external services",
]
addopts = "-v --tb=short"